--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <h4 id="pro">These are some of my Projects</h4>
     <div class="cards" id="cards">
-        <div class="card">
+        <div class="card" style="width: 250px;">
             <h3 class="card-title">Encryption</h3>
             <img src="Pro1.jpg" alt="">
             <p class="card-desc">Me and my team were able to create an encryption system for the Prolex ltd. company.
