--- a/index.html
+++ b/index.html
@@ -145,6 +145,10 @@
               <i class="fa fa-instagram" aria-hidden="true"></i>
               <span> - Instagram</span>
             </a>
-          </li>      
+          </li>  
+        <section>
+            <p>Author: Dmaiyo</p>
+            <p>All rights reserved</p>
+        </section>
 </body>
 </html>
