--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
               <span> - Instagram</span>
             </a>
           </li>  
-        <section>
+        <section id="last">
             <p>Author: Dmaiyo</p>
             <p>All rights reserved</p>
         </section>
