--- a/index.html
+++ b/index.html
@@ -147,8 +147,8 @@
             </a>
           </li>  
         <section id="last">
-            <p>Author: Dmaiyo</p>
-            <p>All rights reserved</p>
+            <h7>Author: Dmaiyo</h7>
+            <h7>All rights reserved</h7>
         </section>
 </body>
 </html>
