--- a/index.html
+++ b/index.html
@@ -11,12 +11,24 @@
 <body> 
 
   <!-- menu -->
-    <div class="topnav">
+    <header>
+        <a href="#" class="logo">
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQPYFT9kLPBMk_1D_NMBBk3rCso4OtPXTjxeg&usqp=CAU" width="50" height="">
+            Logo</a>
+        <ul>
+            <li><a href="#profile">Who am I</a></li>
+            <li><a href="#pro">Projects</a></li>
+            <li><a href="#cust">Testimonies</a></li>
+            <li><a href="#contact">Contacts</a></li>
+        </ul> 
+    </header>
+    
+<!--     <div class="topnav">
       <a href="#profile">Who am I</a>
       <a href="#pro">Projects</a>
       <a href="#cust">Testimonies</a>
       <a href="#contact">Contacts</a>
-    </div>
+    </div> -->
     
     <script type="text/javascript">
         window.addEventListener("scroll", function(){
