--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <div class="cards" id="cards">
         <div class="card" style="width: 250px;">
             <h3 class="card-title">Encryption</h3>
-            <img src="https://github.com/Joshuadalmas/jd/blob/main/pro1.jpg" >
+            <img src="pro2.jpg" alt="">
             <p class="card-desc">Me and my team were able to create an encryption system for the Prolex ltd. company.
                 It was one of our finest projects and enabled me to gain experience in matters concerning security.
             </p>
