--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <!-- menu -->
     
     <div class="topnav">
-      <a href="#profile">Who am I</a>
+      <a href="#profile">Who are we</a>
       <a href="#pro">Projects</a>
       <a href="#cust">Testimonies</a>
       <a href="#contact">Contacts</a>
@@ -26,34 +26,34 @@
     <!-- profile -->
     <section id="profile">
         <div class="content">
-          <h1>Hi, I am Dalmas</h1>
-          <p>I am an IT project manager with 6+ years of experience and over 15 successful projects delivered to my various customers. Don't worry, you dont have to take my word for it.</p>
+          <h1>Hi, this is "black"</h1>
+          <p>We are an IT project management team with 6+ years of experience and over 15 successful projects delivered to mour various customers. Don't worry, you dont have to take our word for it.</p>
           </div>
         <div class="waves"></div>
     </section>
 
     <!-- Projects -->
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-    <h4 id="pro">These are some of my Projects</h4>
+    <h4 id="pro">These are some of our Projects</h4>
     <div class="cards" id="cards">
         <div class="card">
             <h3 class="card-title">Encryption</h3>
             <img src="pro1.jpg" alt="">
-            <p class="card-desc">Me and my team were able to create an encryption system for the Prolex ltd. company.
-                It was one of our finest projects and enabled me to gain experience in matters concerning security.
+            <p class="card-desc">Our team is able to create an encryption system for the "blank" ltd. company.
+                It was one of our finest projects and enabled us to gain experience in matters concerning security.
             </p>
         </div>
         <div class="card">
             <h3 class="card-title">Filing system</h3>
             <img src="pro2.jpg" alt="">
-            <p class="card-desc">With a rapid increase of users, the upcoming company 'Betlinkd' faced some issues in adjusting to the large increase in data. 
-                I was therefore assigned to coordinate the process of creating an upgraded filing system, which also involved reengineering the database.</p>
+            <p class="card-desc">With a rapid increase of users, the upcoming company "blank" faced some issues in adjusting to the large increase in data. 
+                We were therefore assigned to coordinate the process of creating an upgraded filing system, which also involved reengineering the database.</p>
         </div>
         <div class="card">
             <h3 class="card-title">Portal</h3>
             <img src="pro3.jpg" alt="">
-            <p class="card-desc">I managed the construction of a school portal for the Sinergy University. 
-                It was one of the most detailed of my projects but due to the experience acquired with similar but smaller projects, it was executed superbly.</p>
+            <p class="card-desc">We managed the construction of a school portal for the Sinergy University. 
+                It was one of the most detailed of our projects but due to the experience acquired with similar but smaller projects, it was executed superbly.</p>
         </div>
     </div>
 
@@ -131,19 +131,19 @@
             </a>
           </li>
           <li>
-            <a href="https://twitter.com/DalmasJoshua">
+            <a href="https://twitter.com/">
               <i class="fa fa-twitter" aria-hidden="true"></i>
               <span> - Twitter</span>
             </a>
           </li>
           <li>
-            <a href="https://mail.google.com/mail/u/0/#inbox">
+            <a href="https://mail.google.com/mail/">
               <i class="fa fa-google-plus" aria-hidden="true"></i>
               <span> - Gmail</span>
             </a>
           </li>
           <li>
-            <a href="https://www.instagram.com/macogoti/">
+            <a href="https://www.instagram.com/">
               <i class="fa fa-instagram" aria-hidden="true"></i>
               <span> - Instagram</span>
             </a>
